Use the same font family for page headings

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -68,7 +68,6 @@
 \renewcommand{\vec}[1]{\boldsymbol{#1}}
 \renewcommand{\r}{\kern2pt\raisebox{1.5ex}{\circle{2}}}
 
-\def\urantiaheadingfont{Arial Narrow Bold}
 \def\urantiaparttitlefont{GoudyHandtooled BT}
 \def\hebrewfontname{SBL Hebrew}
 \def\greekfontname{SBL Greek}
@@ -76,12 +75,14 @@
 \def\chinesefontname{Code2000}
 
 \tunemarkup{basker}{%
+\def\urantiaheadingfont{Baskerville 10 Pro}
 \def\urantiamainfont{Baskerville 10 Pro}
 \def\urantiaauthorfont{Baskerville 10 Pro}
 \def\urantiatitlefont{Baskerville 10 Pro}
 }
 
 \tunemarkup{garamond}{%
+\def\urantiaheadingfont{Garamond Premier Pro Semibold Caption}
 \def\urantiamainfont{Garamond Premier Pro}
 \def\urantiaauthorfont{PF DaVinci Script Pro}
 \def\urantiatitlefont{Garamond Premier Pro Semibold Display}
@@ -968,7 +969,7 @@
 \newcommand{\bibpapertitlefont}{\titlefont\fontsize{18}{19}\bfseries}
 \newcommand{\bibsectitlefont}{\titlefont\fontsize{15}{19}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5}\fontsize{10}{10}\bfseries}
-\newcommand{\bibheadpapersize}{\fontsize{13.0}{13.0}\selectfont}
+\newcommand{\bibheadpapersize}{\fontsize{11.0}{11.0}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{10}{10}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{9}{9}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{10}{10}\selectfont}
