Add a few indices as a sample of this feature

--- a/tex/p045.tex
+++ b/tex/p045.tex
@@ -70,7 +70,7 @@
 \vs p045 4:15 \ublistelem{13.}\bibnobreakspace \bibemph{Elijah,} a translated soul of brilliant spiritual achievement during the post\hyp{}Material Son age.
 \vs p045 4:16 \ublistelem{14.}\bibnobreakspace \bibemph{Machiventa Melchizedek,} the only Son of this order to bestow himself upon the Urantia races. While still numbered as a Melchizedek, he has become “forever a minister of the Most Highs,” eternally assuming the assignment of service as a mortal ascender, having sojourned on Urantia in the likeness of mortal flesh at Salem in the days of Abraham. This Melchizedek has latterly been proclaimed vicegerent Planetary Prince of Urantia with headquarters on Jerusem and authority to act in behalf of Michael, who is actually the Planetary Prince of the world whereon he experienced his terminal bestowal in human form. Notwithstanding this, Urantia is still supervised by successive resident governors general, members of the four and twenty counsellors.
 \vs p045 4:17 \ublistelem{15.}\bibnobreakspace \bibemph{John the Baptist,} the forerunner of Michael’s mission on Urantia and, in the flesh, distant cousin of the Son of Man.
-\vs p045 4:18 \ublistelem{16.}\bibnobreakspace \bibemph{1\hyp{}2\hyp{}3 the First,} the leader of the loyal midway creatures in the service of Gabriel at the time of the Caligastia betrayal, elevated to this position by Michael soon after his entrance upon unconditioned sovereignty.
+\vs p045 4:18 \ublistelem{16.}\bibnobreakspace \bibemph{1\hyp{}2\hyp{}3 the First,}\index{1\hyp{}2\hyp{}3 the First!16\ts{th} member of 24 counsellors} the leader of the loyal midway creatures in the service of Gabriel at the time of the Caligastia betrayal, elevated to this position by Michael soon after his entrance upon unconditioned sovereignty.
 \vs p045 4:19 \pc These selected personalities are exempt from the ascension regime for the time being, on Gabriel’s request, and we have no idea how long they may serve in this capacity.
 \vs p045 4:20 Seats numbers 17, 18, 19, and 20 are not permanently occupied. They are temporarily filled by the unanimous consent of the 16 permanent members, being kept open for later assignment to ascending mortals from the present postbestowal Son age on Urantia.
 \vs p045 4:21 Numbers 21, 22, 23, and 24 are likewise temporarily filled while being held in reserve for the great teachers of other and subsequent ages which undoubtedly will follow the present age. Eras of the Magisterial Sons and Teacher Sons and the ages of light and life are to be anticipated on Urantia, regardless of unexpected visitations of divine Sons which may or may not occur.
