--- a/tex/p077.tex
+++ b/tex/p077.tex
@@ -85,7 +85,7 @@
 \vs p077 7:8 The entire group of rebel midwayers is at present held prisoner by order of the Most Highs of Edentia. No more do they roam this world on mischief bent. Regardless of the presence of the Thought Adjusters, the pouring out of the Spirit of Truth upon all flesh forever made it impossible for disloyal spirits of any sort or description ever again to invade even the most feeble of human minds. Since the day of Pentecost there never again can be such a thing as demoniacal possession.
 \usection{The United Midwayers}
 \vs p077 8:1 At the last adjudication of this world, when Michael removed the slumbering survivors of time, the midway creatures were left behind, left to assist in the spiritual and semispiritual work on the planet. They now function as a single corps, embracing both orders and numbering 10,992. \bibemph{The United Midwayers of Urantia} are at present governed alternately by the senior member of each order. This regime has obtained since their amalgamation into one group shortly after Pentecost.
-\vs p077 8:2 The members of the older or primary order are generally known by numerals; they are often given names such as 1\hyp{}2\hyp{}3 the first, 4\hyp{}5\hyp{}6 the first, and so on. On Urantia the Adamic midwayers are designated alphabetically in order to distinguish them from the numerical designation of the primary midwayers.
+\vs p077 8:2 The members of the older or primary order are generally known by numerals; they are often given names such as 1\hyp{}2\hyp{}3 the first\index{1\hyp{}2\hyp{}3 the First}, 4\hyp{}5\hyp{}6 the first, and so on. On Urantia the Adamic midwayers are designated alphabetically in order to distinguish them from the numerical designation of the primary midwayers.
 \vs p077 8:3 Both orders are nonmaterial beings as regards nutrition and energy intake, but they partake of many human traits and are able to enjoy and follow your humour as well as your worship. When attached to mortals, they enter into the spirit of human work, rest, and play. But midwayers do not sleep, neither do they possess powers of procreation. In a certain sense the secondary group are differentiated along the lines of maleness and femaleness, often being spoken of as “he” or “she.” They often work together in such pairs.
 \vs p077 8:4 Midwayers are not men, neither are they angels, but secondary midwayers are, in nature, nearer man than angel; they are, in a way, of your races and are, therefore, very understanding and sympathetic in their contact with human beings; they are invaluable to the seraphim in their work for and with the various races of mankind, and both orders are indispensable to the seraphim who serve as personal guardians to mortals.
 \vs p077 8:5 \pc The United Midwayers of Urantia are organized for service with the planetary seraphim in accordance with innate endowments and acquired skills, in the following groups:
@@ -101,8 +101,8 @@
 \vs p077 9:1 Midwayers may be regarded as the first group of the permanent inhabitants to be found on the various orders of worlds throughout the universes in contrast with evolutionary ascenders like the mortal creatures and the angelic hosts. Such permanent citizens are encountered at various points in the Paradise ascent.
 \vs p077 9:2 Unlike the various orders of celestial beings who are assigned to \bibemph{minister} on a planet, the midwayers \bibemph{live} on an inhabited world. The seraphim come and go, but the midway creatures remain and will remain, albeit they are nonetheless ministers for being natives of the planet, and they provide the one continuing regime which harmonizes and connects the changing administrations of the seraphic hosts.
 \vs p077 9:3 As actual citizens of Urantia, the midwayers have a kinship interest in the destiny of this sphere. They are a determined association, persistently working for the progress of their native planet. Their determination is suggested by the motto of their order: “What the United Midwayers undertake, the United Midwayers do.”
-\vs p077 9:4 Although their ability to traverse the energy circuits makes planetary departure feasible to any midwayer, they have individually pledged themselves not to leave the planet prior to their sometime release by the universe authorities. Midwayers are anchored on a planet until the ages of settled light and life. With the exception of 1\hyp{}2\hyp{}3 the first, no loyal midway creatures have ever departed from Urantia.
-\vs p077 9:5 1\hyp{}2\hyp{}3 the first, the eldest of the primary order, was released from immediate planetary duties shortly after Pentecost. This noble midwayer stood steadfast with Van and Amadon during the tragic days of the planetary rebellion, and his fearless leadership was instrumental in reducing the casualties in his order. He serves at present on Jerusem as a member of the 24 counsellors, having already functioned as governor general of Urantia once since Pentecost.
+\vs p077 9:4 Although their ability to traverse the energy circuits makes planetary departure feasible to any midwayer, they have individually pledged themselves not to leave the planet prior to their sometime release by the universe authorities. Midwayers are anchored on a planet until the ages of settled light and life. With the exception of 1\hyp{}2\hyp{}3 the first\index{1\hyp{}2\hyp{}3 the First!the only midwayer, who departed Urantia}, no loyal midway creatures have ever departed from Urantia.
+\vs p077 9:5 1\hyp{}2\hyp{}3 the first, the eldest of the primary order\index{1\hyp{}2\hyp{}3 the First!eldest primary midwayer|textbf}, was released from immediate planetary duties shortly after Pentecost. This noble midwayer stood steadfast with Van and Amadon during the tragic days of the planetary rebellion, and his fearless leadership was instrumental in reducing the casualties in his order. He serves at present on Jerusem as a member of the 24 counsellors, having already functioned as governor general of Urantia once since Pentecost.
 \vs p077 9:6 \pc Midwayers are planet bound, but much as mortals talk with travellers from afar and thus learn about remote places on the planet, so do midwayers converse with celestial travellers to learn about the far places of the universe. So do they become conversant with this system and universe, even with Orvonton and its sister creations, and so do they prepare themselves for citizenship on the higher levels of creature existence.
 \vs p077 9:7 While the midwayers were brought into existence fully developed --- experiencing no period of growth or development from immaturity --- they never cease to grow in wisdom and experience. Like mortals they are evolutionary creatures, and they have a culture which is a bona fide evolutionary attainment. There are many great minds and mighty spirits among the Urantia midway corps.
 \vs p077 9:8 In the larger aspect the civilization of Urantia is the joint product of the Urantia mortals and the Urantia midwayers, and this is true despite the present differential between the two levels of culture, a differential which will not be compensated prior to the ages of light and life.
