Rename Index to Topical Index

--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -228,11 +228,8 @@
   \normalsize\listoffigures
 \fi
 \clp
-\makeatletter
-\bib@raise@anchor{\bibpdfbookmark[0]{Topical Index}{Idx}}%
-\makeatother
-\fancyhead[C]{\bibheadfont\MakeUppercase{\indexname}}
-%\bibpdfbookmark[0]{\indexname}{Idx}
+\fancyhead[C]{TOPICAL INDEX}
+\bibpdfbookmark[0]{Topical Index}{Idx}
 \indexfontsize
 \printindex
 \end{document}
