--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -134,7 +134,6 @@
 \newfontfamily\headingfont[Numbers=Lining,LetterSpace=1.2,WordSpace=1.2,Mapping=tex-text]{\urantiaheadingfont}
 \newfontfamily\authorfontfamily[Mapping=tex-text]{\urantiaauthorfont}
 
-%\newfontfamily\captionfont[Mapping=tex-text]{Linux Libertine O}
 \DeclareCaptionFormat{capfont}{\captionfont\large#1#2#3}
 \captionsetup{format=capfont,labelfont=bf,margin={0cm,0cm},justification=justified,singlelinecheck=off}
 
@@ -1190,5 +1189,4 @@
   \tunemarkuptwo{pgafour}{\clp}{\newpage}
 }
 
-\renewcommand{\indexname}{Topical Index}
-\makeindex[title=\indexname]
+\makeindex[title=Topical Index]
